dynamic-api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dap
  labels:
    app.kubernetes.io/name: dynamic-api-platform
    app.kubernetes.io/part-of: dap
